Fix truncation issue of link

--- a/stencil-workspace/src/components/modus-table/modus-table.scss
+++ b/stencil-workspace/src/components/modus-table/modus-table.scss
@@ -197,7 +197,8 @@ table {
     tr {
       color: $modus-table-body-color;
 
-      .truncate-text {
+      .truncate-text,
+      .truncate-text .cell-link {
         overflow: hidden;
         text-overflow: ellipsis;
         white-space: nowrap;
